sequence_manager: Add task traceevent for Lighthouse in message pump

Bug: 915301,874982
Change-Id: I1d67781b0a2da5a6682d4d2514feaedbfd641720
Reviewed-on: https://chromium-review.googlesource.com/c/1378815
Commit-Queue: Paul Irish <paulirish@chromium.org>
Reviewed-by: Sami Kyöstilä <skyostil@chromium.org>
Reviewed-by: Alexander Timin <altimin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#617204}
Former-commit-id: 5e587cacb10b4b7b703659ed3db46e015767fe7c